--- a/PMS/PMS.DesktopApp.csproj
+++ b/PMS/PMS.DesktopApp.csproj
@@ -8,4 +8,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PMS.Core\PMS.Core.csproj" />
+  </ItemGroup>
+
 </Project>
