change files structure, add new folders, fix styles, add Projects

--- a/PMS.Infrastructure/PMS.Infrastructure.csproj
+++ b/PMS.Infrastructure/PMS.Infrastructure.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PMS.Application\PMS.Application.csproj" />
     <ProjectReference Include="..\PMS.Domain\PMS.Domain.csproj" />
+    <ProjectReference Include="..\PMS.Presentation\PMS.Presentation.csproj" />
   </ItemGroup>
 
 </Project>
