--- a/PMS.UI/PMS.UI.csproj
+++ b/PMS.UI/PMS.UI.csproj
@@ -9,6 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Resources\Styles\**" />
+    <EmbeddedResource Remove="Resources\Styles\**" />
+    <None Remove="Resources\Styles\**" />
+    <Page Remove="Resources\Styles\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.7" />
   </ItemGroup>
 
